Refactor customer and address models with DDD principles